tests/paczka1/small_fuzzy/13792324.err
Error in line 1: S556 S901 45,1
Error in line 2: bi0O S901 72,1
Error in line 6: bi0O A235 94,3
